vnet-twotier/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "vnetName": {
            "type": "string",
            "metadata": {
                "description": "The resource name of your Virtual Network"
            }
        },
        "vnetAddressPrefix": {
            "type": "string",
            "metadata": {
                "description": "The CIDR address range for your Virtual Network"
            }
        },
        "publicSubnetPrefix": {
            "type": "string",
            "metadata": {
                "description": "The CIDR address range for the public subnet"
            }
        },
        "privateSubnetPrefix": {
            "type": "string",
            "metadata": {
                "description": "The CIDR address range for the private subnet"
            }
        },
        "applicationName": {
            "type": "string",
            "metadata": {
                "description": "The value for the application name tag (e.g. WordPress)."
            }
        },
        "environment": {
            "type": "string",
            "metadata": {
                "description": "The value for the environment tag (e.g. Production, Test, Development, Demo, ...)."
            }
        }
    },
    "variables":{
        "publicSecurityGroupName": "[concat('nsg-public-', parameters('vnetName'))]",
        "privateSecurityGroupName": "[concat('nsg-private-', parameters('vnetName'))]"
    },
    "resources": [
        {
            "apiVersion": "2019-09-01",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('publicSecurityGroupName')]",
            "location": "[resourceGroup().Location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "ssh_allow_internet_inbound_rule",
                        "properties": {
                            "description": "Allow SSH on port 22 from anywhere",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "http_allow_internet_inbound_rule",
                        "properties": {
                            "description": "Allow HTTP on port 80 from anywhere",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "https_allow_internet_inbound_rule",
                        "properties": {
                            "description": "Allow HTTPS on port 443 from anywhere",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "all_allow_outbound_rule",
                        "properties": {
                            "description": "Allow Outbound",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Outbound"
                        }
                    }
                ]
            },
            "tags": {
                "ApplicationName": "[parameters('applicationName')]",
                "Network": "Public",
                "Environment": "[parameters('environment')]"
            }
        },
        {
            "apiVersion": "2019-09-01",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('privateSecurityGroupName')]",
            "location": "[resourceGroup().Location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "ssh_allow_public_subnet_inbound_rule",
                        "properties": {
                            "description": "Allow SSH on port 22 from the Public Subnet",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "[parameters('publicSubnetPrefix')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "http_allow_internet_inbound_rule",
                        "properties": {
                            "description": "Allow HTTP on port 80 from anywhere",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "https_allow_internet_inbound_rule",
                        "properties": {
                            "description": "Allow HTTPS on port 443 from anywhere",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "all_allow_outbound_rule",
                        "properties": {
                            "description": "Allow Outbound",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Outbound"
                        }
                    }
                ]
            },
            "tags": {
                "ApplicationName": "[parameters('applicationName')]",
                "Network": "Private",
                "Environment": "[parameters('environment')]"
            }
        },
        {
            "apiVersion": "2019-09-01",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('vnetName')]",
            "location": "[resourceGroup().Location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', variables('publicSecurityGroupName'))]",
                "[concat('Microsoft.Network/networkSecurityGroups/', variables('privateSecurityGroupName'))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('vnetAddressPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[concat('subnet-public-', parameters('vnetName'))]",
                        "properties": {
                            "addressPrefix": "[parameters('publicSubnetPrefix')]",
                            "privateEndpointNetworkPolicies": "Disabled",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('publicSecurityGroupName'))]"
                            }
                        }
                    },
                    {
                        "name": "[concat('subnet-private-', parameters('vnetName'))]",
                        "properties": {
                            "addressPrefix": "[parameters('privateSubnetPrefix')]",
                            "privateEndpointNetworkPolicies": "Disabled",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('privateSecurityGroupName'))]"
                            }
                        }
                    }
                ]
            },
            "tags": {
                "ApplicationName": "[parameters('applicationName')]",
                "Network": "Public",
                "Environment": "[parameters('environment')]"
            }
        }
    ]
}
